# CommunicationWorkshop

./: README.md
C_Program1/: 01_AWGN_Eng_(Michael）.ppt  zoom.txt
C_Program1/C_Program1/: Makefile  Readme.txt
C_Program1/C_Program1_backup/: UpgradeLog.htm  awgn.c  ber.c  const.h  main  main.aps  main.c  main.dsp  main.dsw  main.ncb  main.opt  main.plg  main.sln  main.vcproj  main.vcxproj  receiver.c  transmitter.c
C_Program1/R1 AWGN/: awgn.dvi  awgn.fdb_latexmk  awgn.tex
C_Program1/src/: receiver.c
C_Program3/: Rayleigh.ppt  Rayleigh_en.ppt  main  ~$Rayleigh_en.ppt
C_Program3/C_Program3/: Makefile  coherent  fading  main
C_Program3/GnuPlt/: awgn.PLT  awgn_with_shift.PLT  coherent.PLT  fd_png.PLT  select.PLT  without_fd_png.PLT
C_Program3/R3 Rayleigh/: awgn.bbl  noncoherent_reception.fdb_latexmk  noncoherent_reception.tex  rayleigh.aux  rayleigh.bbl  rayleigh.bib  rayleigh.blg  rayleigh.dvi  rayleigh.fdb_latexmk  rayleigh.fls  rayleigh.tex
C_Program3/src/: ber.c  transmitter.c
C_program2/: fig.pptx
C_program2/C_Program2/: Makefile  coherent
C_program2/GnuPlt/: plot_ber_coherent_noncoherent_theory_png.PLT  plot_ber_coherent_png.PLT
C_program2/R2 Non-coherent detection/: IEEEtran.cls  awgn.bib  ieicej.cls  noncoherent.bib  noncoherent_reception.aux  noncoherent_reception.blg  noncoherent_reception.dvi  noncoherent_reception.fdb_latexmk  noncoherent_reception.fls  noncoherent_reception.tex
C_program4/: OFDM_Eng.ppt
C_program4/C_Program4/: CMakeLists.txt  Makefile  main  other.txt
C_program4/C_Program4/inc/: const.h  const.h.in
C_program4/C_Program4/src/: ber.c  channel.c  main.c  receiver.c  transmitter.c
C_program4/CppVer/: CMakeLists.txt  Makefile
C_program4/GnuPlt/: plot_ber_coherent_png.PLT
C_program4/PyPlot/: ofdm_awgn.eps
C_program4/PythonVer/: ber.py  channel.py  const.py  main.py  transmitter.py
C_program4/inc/: const.h.in
C_program4/py/: ber.py  const.py  main.py  transmitter.py
C_program4/src/: ber.c  channel.c  complex.c  main.c  receiver.c  transmitter.c
Report/GnuPlt/: plot_ber_coherent_noncoherent_theory_png.PLT
Report/IECIE template/: awgn.aux  awgn.bbl  awgn.bib  awgn.blg  awgn.dvi  awgn.fdb_latexmk  awgn.fls  awgn.tex
Report/R1 AWGN/: awgn.aux  awgn.blg  awgn.fls
W1_AWGN/src/: ber.c  main.c
W1_Coherent/inc/: awgn.h
W1_Coherent/src/: awgn.c  ber.c  main.c  receiver.c  transmitter.c
W2_Non-Coherent/inc/: awgn.h
W2_Non-Coherent/src/: awgn.c  ber.c  main.c  receiver.c  transmitter.c
W4_OFDM/: CMakeLists.txt
W5_FEC/: CMakeLists.txt
W5_FEC/PyPlot/: awgn.eps  awgn.txt  plot.ipynb  rayleigh.eps  rayleigh.txt  select.txt
W5_FEC/inc/: const.h.in
W5_FEC/other/: viterbi_reference.cpp  viterbi_test.cpp
W5_FEC/src/: ber.cpp  channel.cpp  complex.cpp  main.cpp  receiver.cpp  transmitter.cpp  viterbi_test.cpp
W6_MIMO/: CMakeLists.txt
W6_MIMO/PyPlot/: awgn.txt  plot.ipynb  rayleigh.txt  select.txt
W6_MIMO/inc/: const.h.in
W6_MIMO/src/: ber.cpp  channel.cpp  complex.cpp  main.cpp  receiver.cpp  transmitter.cpp
(+63 files in other folders)
